--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
     "vue": "^3.0.4"
@@ -11,6 +12,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "sass": "^1.30.0",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^1.0.0-rc.13",
+    "execa": "latest"
   }
 }
